# gkjh

./: .gitignore  README.md  pyproject.toml
.builds/: build.yml  push_to_github.yml
.github/workflows/: test.yaml
gkjh/: __init__.py  expr_formatting.py  misc.py
gkjh/lambdas/: __init__.py  chaining.py  subs.py
scripts/: check-patches  pre-commit  repo-setup.sh
tests/: test_misc.py
tests/examples/: test_rocket.py  test_wing.py
tests/lambdas/: test_chaining.py  test_subs.py
