# Copyright (C) 2024 Gary Kim <gary@garykim.dev>

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.


[project]
name = "gkjh"
description = "Gary Kim Jupyter Helpers"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.8"

dynamic = ["version"]

dependencies = [
    "sympy==1.12",
    "matplotlib>=3.8",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]

extras= [
    "pandas_datareader>=0.10.0",
    "yfinance>=0.2.36",
    "control>=0.9.4",
]

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.urls]
Homepage = "https://sr.ht/~gary-kim/gkjh"
Repository = "https://git.sr.ht/~gary-kim/gkjh"

[[project.authors]]
name = "Gary Kim"
email = "gary@garykim.dev"

